+ Implemented hovers for markers (still need to figure out how to fix z-index problem :/) + Implemented finished home page + Moved shared code from StaticMap and DynamicMap JavaScript files to Shared.js
TODO:
[x] Figure out how to get Hurricane Tracking Data
[x] Implement Hurricane data into maps with markers
[x] Implement hovers for markers including more information about said Hurricane
[ ] Implement overlay over map if no hurricanes found
[ ] Finish Get Prepared page
[x] Finish Home page
[ ] Finish About Us page
[ ] Make whole site responsive

--- a/css/maps.css
+++ b/css/maps.css
@@ -2,6 +2,46 @@
 /* ------------------- */
 /* */
 
+div.hoverbubble {
+    position: relative;
+    text-decoration: none;
+}
+div.hoverbubble span {
+    display: none;
+    z-index: 99999;
+}
+div.hoverbubble:hover {
+    cursor: pointer;
+}
+div.hoverbubble:hover span {
+    display: block;
+    position: absolute;
+    padding: .5em;
+    text-align: center;
+    width: auto;
+    height: auto;
+    white-space: nowrap;
+    top: -85px;
+    background: rgba(0,0,0,.8);
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    color: #fff;
+    font-size: 0.86em;
+    font-family: Arial, Helvetica, sans-serif;
+}
+div.hoverbubble:hover span:after {
+    position: absolute;
+    display: block;
+    content: "";
+    border-color: rgba(0,0,0,.8) transparent transparent transparent;
+    border-style: solid;
+    border-width: 10px;
+    height: 0;
+    width: 0;
+    bottom: -20px;
+    left: 1em;
+}
 @media only screen and (min-height: 375px) {
     /* For iPhone 6 landscape mode: */
     #map-container {
@@ -42,6 +82,8 @@
         width: 50px;
         height: 50px;
         background: url("https://i.gyazo.com/1a59698855234f3395075428f8797245.gif") no-repeat scroll 0% 0% transparent;
+        position: relative;
+        display: inline-block;
     }
 }
 @media only screen and (min-width: 1366px) {
